minor changes to BarcodeUtil and barcode class resolver